# python-project-lvl1

./: README.md  pyproject.toml
.github/workflows/: check-lint.yml  hexlet-check.yml
brain_games/: __init__.py  cli.py  gen_func.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
